--- a/style.css
+++ b/style.css
@@ -49,3 +49,31 @@ section {
   position: relative;
   animation: animate 1s linear infinite;
 }
+@keyframes animate {
+  0%,15% {
+    opacity: 0;
+  }
+  15.1%, 100% {
+    opacity: 1;
+  }
+}
+@media (max-width: 768px) {
+  section {
+    flex-direction: column;
+  }
+  .sec {
+    width: 100%;
+    height: 50%;
+  }
+  .sec h2 {
+    font-size: 30vw;
+  }
+  .sec2 h2 {
+    font-size: 60vw;
+  }
+  #ampm {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  }
+}
